# foam

./: LICENSE  README.md  pyproject.toml
foam/: cli.py
