[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foam"
version = "1.0.0"
description = "A simple CLI tool for tracking and resetting folders"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jesper Fjellin", email = "jesperfjellin@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
foam = "foam.cli:main"
